Fix inconsistency in preview visibility on AppImages

In AppImages, the Qt file picker will always be used regardless of the
value of QFileDialog::DontUseNativeDialog. This commit ensures the
preview is shown if there's a layout() present when the checkbox isn't
ticked, and disables the checkbox altogether on AppImages.

BUG: 447806
CCMAIL: kimageshop@kde.org
(cherry picked from commit ad416d3c2f73cacd0bce4ce8add9a2755d1b769a)