libs/widgetutils/KisPreviewFileDialog.cpp
@@ -83,7 +83,9 @@ void KisPreviewFileDialog::resetIconProvider()
 void KisPreviewFileDialog::onCurrentChanged(const QString &path)
 {
     // Generate the preview only if we're not using the native dialog.
-    if (testOption(QFileDialog::DontUseNativeDialog) && m_preview) {
+    // In AppImages, the platform plugins are inaccessible,
+    // so we check the existance of a widget layout instead.
+    if ((testOption(QFileDialog::DontUseNativeDialog) || layout()) && m_preview) {
         QIcon icon;
         if (s_iconCreator && s_iconCreator->createFileIcon(path, icon, devicePixelRatioF(), QSize(512, 512), true)) {
             m_preview->setPixmap(icon.pixmap(m_preview->width(), m_preview->height()));
